# utility_behavior_gap

./: .gitignore  README.md  pyproject.toml  requirements.txt
CURRENT_PAPER/: README.md
CURRENT_PAPER/docs/: amount_comparison_audit.md  analysis_workflow.md  appendix_effort_dose_test.md  appendix_findings_to_carry_forward.md  appendix_reasoning_trace_incentive_mentions.md  appendix_user_prompt_role_cue.md  canonical_artifact_index.md  canonical_prompt_book.md  feature_definitions.yaml
CURRENT_PAPER/features/: amount_combined_feature_appendix_all.csv  amount_combined_feature_appendix_clear_differences.csv  amount_combined_feature_appendix_clear_differences.md  amount_combined_feature_appendix_clear_differences.tex  amount_combined_feature_appendix_summary.md  amount_feature_deltas_overall.csv  amount_feature_deltas_summary.md  amount_high_vs_framed_neutral_generic_feature_appendix_all.csv  final_text_analysis_summary.md  (+99 more)
analysis_specs/: feature_definitions.yaml
consolidated_workflow/: README.md  feature_tables.py  pairwise.py
docs/: analysis_workflow.md  appendix_effort_dose_test.md  appendix_findings_to_carry_forward.md  canonical_artifact_index.md  public_repo_audit_checklist.md  public_repo_manifest.md
tests/: test_analysis.py  test_api_errors.py  test_emergent_values_bridge.py  test_highlow_vs_direct_judging.py  test_live_pipeline_inputs.py  test_openrouter.py  test_packaged_entrypoints.py  test_prompt_templates.py  test_run_generation.py  test_run_judging.py  test_run_max_effort_batch.py  test_run_mimo_utility_refit.py  trial_level_data.textClipping
(+307 files in other folders)
