[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "utility-behavior-gap"
version = "0.1.0"
description = "Reproduction code and data for Utility-Behavior Gap experiments"
requires-python = ">=3.10"
dependencies = [
    "bottleneck>=1.3.6",
    "matplotlib>=3.7",
    "numpy>=1.23",
    "pandas>=1.5",
    "PyYAML>=6",
    "spacy>=3.7",
    "statsmodels>=0.13",
    "textstat>=0.7",
    "wordfreq>=3.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
